RF: Text alignment and software card fix

--- a/_static/css/grg/about/about.css
+++ b/_static/css/grg/about/about.css
@@ -19,8 +19,13 @@
   align-items: center;
 }
 
-.about-intro {
+.about-intro-des {
   width: 100%;
+  text-align: center;
+  margin: 0 auto;
+  color: #636973;
+  font-size: 1.1rem;
+  line-height: 1.6;
 }
 
 .about-selector-cards {
