--- a/_static/css/grg/team/team.css
+++ b/_static/css/grg/team/team.css
@@ -23,9 +23,8 @@
 }
 
 .team-intro {
-  text-align: center;
-  max-width: 75%;
-  margin: 0 auto 50px;
+  text-align: justify;
+  margin: 0 auto 30px;
   color: #636973;
   font-size: 1.1rem;
   line-height: 1.6;
@@ -136,6 +135,7 @@
 @media (max-width: 1640px) {
   .team-intro {
     margin: 0 auto 20px;
+    max-width: 80%;
   }
 
   .team-container {
